force-app/main/default/objects/BMCServiceDesk__SYSDashboardWidget__c/BMCServiceDesk__SYSDashboardWidget__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the widget state of all dashboards.</description>
    <label>Dashboard Widget</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSDashboardWidgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>