force-app/main/default/objects/BMCServiceDesk__SYSDashboardWidget__c/fields/BMCServiceDesk__isFullWidth__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__isFullWidth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a QuickView should be spanned across the width of the Console Dashboard.</description>
    <label>Span Full Width</label>
    <type>Checkbox</type>
</CustomField>