force-app/main/default/objects/BMCServiceDesk__SYSDashboardWidget__c/fields/BMCServiceDesk__QuickView_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__QuickView_Display_Order__c</fullName>
    <description>Stores the display order of QuickViews in the Console Dashboard for each user.</description>
    <label>QuickView Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>