force-app/main/default/objects/BMCServiceDesk__SYSDashboardWidget__c/fields/BMCServiceDesk__State__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__State__c</fullName>
    <label>State</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>