force-app/main/default/objects/BMCServiceDesk__SYSDashboardWidget__c/fields/BMCServiceDesk__width__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__width__c</fullName>
    <label>Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>