force-app/main/default/objects/BMCServiceDesk__SYSDashboardWidget__c/fields/BMCServiceDesk__xPos__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__xPos__c</fullName>
    <label>XPos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>